--- a/index.html
+++ b/index.html
@@ -19,48 +19,283 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- swiper carousel -->
+    <link rel="stylesheet" href="css/swiper.min.css" />
+    <!-- Responsive -->
+    <!-- <link rel="stylesheet" href="./css/responsive.css" /> -->
     <!-- custom css -->
     <link rel="stylesheet" href="./css/style.css" />
     <title>WeTex</title>
   </head>
   <body>
-    <section id="topBar">
+    <!-- Header start -->
+    <section id="header">
+      <!-- Top-bar start -->
+      <div class="d-none d-lg-block" id="topBar">
+        <div class="container">
+          <div class="row">
+            <div class="col d-flex justify-content-between align-items-center">
+              <ul class="list-unstyled d-flex m-0">
+                <li class="address-top">
+                  <i class="fa-sharp fa-solid fa-location-dot"></i
+                  ><span>
+                    H-33, Alcove Rosetta, Sonargaon Janapath, Sector-12, Uttara,
+                    Dhaka-1230</span
+                  >
+                </li>
+                <li class="mail-top">
+                  <i class="fa-solid fa-envelope"></i
+                  ><span>wetex.dhaka@gmail.com </span>
+                </li>
+              </ul>
+              <ul class="list-unstyled social-links d-flex m-0">
+                <li class="social-link">
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                </li>
+                <li class="social-link">
+                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li class="social-link">
+                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+                <li class="social-link">
+                  <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Top-bar end -->
+      <!-- Nav-bar Start -->
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white p-0">
+          <a class="navbar-brand d-flex align-items-center" href="#"
+            ><img
+              src="./images/Logo.png"
+              height="60px"
+              width="60px"
+              alt=""
+            /><span class="brand-title">WeTex</span></a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-center"
+            id="navbarNavDropdown"
+          >
+            <ul class="navbar-nav nav-fill">
+              <li class="nav-item active">
+                <a class="nav-link" href="#"
+                  >HOME <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">ABOUT US</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">SERVICES</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">PROJECTS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT US</a>
+              </li>
+            </ul>
+          </div>
+          <button class="btn btn-nav d-none d-lg-block">Get A Qoute</button>
+        </nav>
+      </div>
+      <!-- Nav-bar End -->
+    </section>
+    <!-- Header end -->
+    <!-- start slider section -->
+    <!-- start slider -->
+    <section id="slider">
+      <div
+        class="swiper-container"
+        data-slider-options='{ "loop": true, "slidesPerView": "1", "effect":"fade",
+          "allowTouchMove":true, "autoplay": { "delay": 5000, "disableOnInteraction": false }, "keyboard": { "enabled": true, "onlyInViewport": true }, "navigation": { "nextEl": ".swiper-button-next", "prevEl": ".swiper-button-prev" }, "lazy": {"loadPrexNext": true}, "speed": 2000 }'
+      >
+        <div class="swiper-wrapper">
+          <!-- start slider item -->
+          <div
+            class="swiper-slide cover-background"
+            style="
+              background-image: url('https://source.unsplash.com/random/1920x1235/?fashion');
+            "
+          >
+            <div class="row h-100 text-row">
+              <div
+                class="slider-text col-12 d-flex flex-column justify-content-center"
+              >
+                <span class="subtitle"
+                  ><span></span>Since 2015
+                  <div class="text-border"></div
+                ></span>
+
+                <h1 class="title">
+                  Sourcing & Manufacturing Solutions For
+                  <span class="text-important">Apparel & Home Decor</span>
+                </h1>
+                <span class="slider-des"
+                  >We are a full service company providing solutions for all of
+                  your Development, Sourcing & Manufacturing needs.</span
+                >
+                <div class="slider-btn">
+                  <a href="#" target="_blank" class="btn btn-slider"
+                    >Purchase Now</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- end slider item -->
+          <!-- start slider item -->
+          <div
+            class="swiper-slide cover-background"
+            style="
+              background-image: url('https://source.unsplash.com/random/1920x1234/?fashion');
+            "
+          >
+            <div class="row h-100 text-row">
+              <div
+                class="slider-text col-12 d-flex flex-column justify-content-center"
+              >
+                <span class="subtitle"
+                  ><span></span>Since 2016
+                  <div class="text-border"></div
+                ></span>
+
+                <h1 class="title">
+                  Sourcing & Manufacturing Solutions For
+                  <span class="text-important">Apparel & Home Decor</span>
+                </h1>
+                <span class="slider-des"
+                  >We are a full service company providing solutions for all of
+                  your Development, Sourcing & Manufacturing needs.</span
+                >
+                <div class="slider-btn">
+                  <a href="#" target="_blank" class="btn btn-slider"
+                    >Purchase Now</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- end slider item -->
+          <!-- start slider item -->
+          <div
+            class="swiper-slide cover-background"
+            style="
+              background-image: url('https://source.unsplash.com/random/1920x1236/?fashion');
+            "
+          >
+            <div class="row h-100 text-row">
+              <div
+                class="slider-text col-12 d-flex flex-column justify-content-center"
+              >
+                <span class="subtitle"
+                  ><span></span>Since 2017
+                  <div class="text-border"></div
+                ></span>
+
+                <h1 class="title">
+                  Sourcing & Manufacturing Solutions For
+                  <span class="text-important">Apparel & Home Decor</span>
+                </h1>
+                <span class="slider-des"
+                  >We are a full service company providing solutions for all of
+                  your Development, Sourcing & Manufacturing needs.</span
+                >
+                <div class="slider-btn">
+                  <a href="#" target="_blank" class="btn btn-slider"
+                    >Purchase Now</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- end slider item -->
+        </div>
+        <!-- start slider pagination -->
+        <div class="swiper-pagination swiper-pagination-white"></div>
+        <!-- end slider pagination -->
+        <!-- start slider navigation -->
+        <!-- <div class="swiper-button-next light"><i class="ti-angle-right"></i></div>
+      <div class="swiper-button-prev light"><i class="ti-angle-left"></i></div> -->
+        <!-- end slider navigation -->
+      </div>
+    </section>
+    <!-- end slider -->
+    <!-- end slider section -->
+    <section id="location">
       <div class="container">
         <div class="row">
-          <div class="col d-flex justify-content-between align-items-center">
-            <ul class="list-unstyled d-flex m-auto">
-              <li class="address-top">
-                <i class="fa-sharp fa-solid fa-location-dot"></i
-                ><span> H-5, Road 3, Sector 3, Uttara, Dhaka - 1230</span>
-              </li>
-              <li class="mail-top">
-                <i class="fa-solid fa-envelope"></i
-                ><span>info@sourcingunited.ca</span>
-              </li>
-            </ul>
-            <ul class="list-unstyled social-links d-flex m-auto">
-              <li>
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-              </li>
-            </ul>
+          <div class="col-md-6 col-sm-12 location-info">
+            <div class="row">
+              <div class="col-md-6 col-sm-12 d-flex">
+                <div class="icon">
+                  <i class="fa-sharp fa-solid fa-location-dot"></i>
+                </div>
+                <div class="info-text">
+                  <h4 class="heading">Location</h4>
+                  <p class="description">
+                    H-33, Sonargaon Janapath, Sector-12, Uttara, Dhaka-1230
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-6 col-sm-12 d-flex">
+                <div class="icon">
+                  <i class="fa-solid fa-envelope"></i>
+                </div>
+                <div class="info-text">
+                  <h4 class="heading">Email</h4>
+                  <p class="description">wetex.dhaka@gmail.com</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 d-md-flex">
+            <div class="card card-1">
+              <h4 class="title">Quality Product</h4>
+              <p class="description">
+                Dynamic business models positioned to operate on short lead
+                times, low margins and flexible volume.
+              </p>
+            </div>
+            <div class="card card-2 text-center">
+              <h4 class="title">Project Overview</h4>
+              <h1 class="mt-4">600</h1>
+              <p class="description">Export Projects</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- script -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+    <!-- jQuery -->
+    <script src="./js//jquery.js"></script>
+    <script type="text/javascript" src="js/smooth-scroll.js"></script>
+    <!-- Bootstrap 5 -->
+    <script src="./js/bootstrap.bundle.js"></script>
+    <!-- Wow script -->
+    <script src="./js//wow.min.js"></script>
+    <!-- Swiper slider -->
+    <script src="./js/swiper.min.js"></script>
+    <script src="./js/main.js"></script>
+    <script>
+      let swiper = new Swiper(".mySwiper", {});
+    </script>
   </body>
 </html>
